--- a/views/form.phtml
+++ b/views/form.phtml
@@ -1,36 +1,56 @@
+<?php if ($form->error('_form')): ?>
+    <div>
+        <?php foreach ($form->error('_form') as $error): ?>
+            <?= $this->escape($error) ?>
+        <?php endforeach ?>
+    </div>
+<?php endif ?>
 <?php foreach ($form->fields() as $name => $field): ?>
     <?php $inputId = $form->name().'_'.$name ?>
     <?php $inputName = $form->name().'['.$name.']' ?>
     <?php $type = $field['type'] ?>
-    <div id="<?= $inputName ?>_group" class="form-group">
+    <?php if ($type != 'hidden'): ?>
+        <div id="<?= $inputName ?>_group" class="form-group">
+    <?php endif ?>
         <?php // Label ?>
         <?php if (isset($field['label'])): ?>
             <label for="<?= $inputId ?>"><?= $this->escape($field['label']) ?></label>
         <?php endif ?>
-        <?php // Input types ?>
         <?php if ($type == 'text'): ?>
+            <?php // -- Text -- ?>
             <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="text" value="<?= $form->value($name, true) ?>">
         <?php elseif ($type == 'password'): ?>
+            <?php // -- Password -- do not store the value in HTML code! ?>
             <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="password" value="">
-        <?php elseif ($type == 'checkbox'): ?>
+        <?php elseif ($type == 'checkbox'): ?>            
+            <?php // -- Checkbox -- ?>
             <?php if (isset($field['text'])): ?><label><?php endif ?>
-            <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="checkbox" value="1"<?= $form->value($name) ? ' checked' : '' ?>>
+            <?php $value = isset($field['value']) ? $field['value'] : '1' ?>
+            <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="checkbox" value="<?= $value ?>"<?= $form->value($name) == $value ? ' checked' : '' ?>>
             <?php if (isset($field['text'])): ?><?= $this->escape($field['text']) ?></label><?php endif ?>
-        <?php elseif ($type == 'select'): ?>
+        <?php elseif ($type == 'select'): ?>            
+            <?php // -- Select -- ?>
             <select id="<?= $inputId ?>" name="<?= $inputName ?>">
                 <?php foreach ($field['options'] as $value => $text): ?>
                     <option value="<?= $this->escapeAttribute($value) ?>"<?= $form->value($name) == $value ? ' selected' : ''?>><?= $this->escape($text) ?></option>
                 <?php endforeach ?>
             </select>
+        <?php elseif ($type == 'hidden'): ?>
+            <?php // -- Hidden -- ?>
+            <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="hidden" value="<?= $form->value($name, true) ?>">
         <?php elseif ($type == 'submit'): ?>
+            <?php // -- Submit -- ?>
             <input id="<?= $inputId ?>" name="<?= $inputName ?>" type="submit" value="<?= $field['text'] ?>">
         <?php endif ?>
         <?php // Error ?>
         <?php if ($form->error($name)): ?>
             <small><?= $this->escape($form->error($name)) ?></small>
         <?php endif ?>
+        <?php // Description ?>
         <?php if (isset($field['description'])): ?>
             <small><?= $this->escape($field['description']) ?></small>
         <?php endif ?>
-    </div>
+    <?php if ($type != 'hidden'): ?>
+        </div>
+    <?php endif ?>
 <?php endforeach ?>
