--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href="<?= $this->routeUrl('/') ?>">Home</a></li>
+                <li><a href="<?= route_url('/') ?>">Home</a></li>
             </ul>
         </nav>
         <main>
