--- a/views/layout-scripts.phtml
+++ b/views/layout-scripts.phtml
@@ -1,3 +1,3 @@
 <?php foreach ($__scripts as $url => $attributes): ?>
-    <script type="text/javascript" src="<?= $this->staticUrl($url) ?>"<?= $this->attributes($attributes) ?>></script>
+    <script type="text/javascript" src="<?= url($url) ?>"<?= esc_attrs($attributes) ?>></script>
 <?php endforeach ?>
