--- a/views/layout-styles.phtml
+++ b/views/layout-styles.phtml
@@ -1,3 +1,3 @@
 <?php foreach ($__styles as $url => $attributes): ?>
-    <link rel="stylesheet" type="text/css" href="<?= $this->staticUrl($url) ?>"<?= $this->attributes($attributes) ?>>
+    <link rel="stylesheet" type="text/css" href="<?= url($url) ?>"<?= esc_attrs($attributes) ?>>
 <?php endforeach ?>
